--- a/eshop_project/templates/shop/add_product.html
+++ b/eshop_project/templates/shop/add_product.html
@@ -8,9 +8,14 @@
 <body>
     <h3>Add Product Page</h3>
     
-    <form action="">
-
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="text" name="pro_id" placeholder="product id">
+        <input type="text" name="name" placeholder="product name">
+        <input type="number" name="price" placeholder="price">
+        <input type="number" name="o_price" placeholder="offer price">
+        <input type="file" name="img">
+        <input type="submit" value="Add">
     </form>
-    
 </body>
 </html>
