--- a/eshop_project/templates/shop/shop_home.html
+++ b/eshop_project/templates/shop/shop_home.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Add Product</a>
+                        <a class="nav-link" href="add_product">Add Product</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="logout">Logout</a>
@@ -41,7 +41,8 @@
                         <h4 class="card-title">{{pro.product_name}}</h4>
                         <p class="card-text">{{pro.price}}</p>
                         <p class="card-text">{{pro.offer_price}}</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <a href="edit_product/{{pro.pk}}" class="btn btn-primary">Edit</a>
+                        <a href="#" class="btn btn-primary">Delete</a>
                     </div>
                 </div>
             </div>
