--- a/eshop_project/templates/shop/shop_home.html
+++ b/eshop_project/templates/shop/shop_home.html
@@ -42,7 +42,7 @@
                         <p class="card-text">{{pro.price}}</p>
                         <p class="card-text">{{pro.offer_price}}</p>
                         <a href="edit_product/{{pro.pk}}" class="btn btn-primary">Edit</a>
-                        <a href="#" class="btn btn-primary">Delete</a>
+                        <a href="delete_product/{{pro.pk}}" class="btn btn-primary">Delete</a>
                     </div>
                 </div>
             </div>
