--- a/eshop_project/templates/login.html
+++ b/eshop_project/templates/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         body{
             background-color:lightgray;
@@ -43,6 +45,16 @@
     </style>
 </head>
 <body>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+
+
     <div style="background-color:lightslategrey ;padding: 10px;"> 
         <h2 style="text-align: center;color: white;">LOGIN PAGE</h2>
 
@@ -55,8 +67,11 @@
             <p><b>Password : </b><input type="password" name="password"></p>
             <input type="submit" value="Login">
         </form>
+        <a href="register">Register</a>
 
     </div>
+
+
     
 </body>
 </html>
