--- a/eshop_project/templates/login.html
+++ b/eshop_project/templates/login.html
@@ -42,6 +42,8 @@
             background-color: gray;
             color: white;
         }
+        
+        
     </style>
 </head>
 <body>
@@ -57,8 +59,8 @@
 
     <div style="background-color:lightslategrey ;padding: 10px;"> 
         <h2 style="text-align: center;color: white;">LOGIN PAGE</h2>
-
     </div>
+    
     
     <div>
         <form action="" method="post">
@@ -67,8 +69,7 @@
             <p><b>Password : </b><input type="password" name="password"></p>
             <input type="submit" value="Login">
         </form>
-        <a href="register">Register</a>
-
+        <a href="register" class="btn btn-secondary">Register</a>
     </div>
 
 
