--- a/eshop_project/templates/user/register.html
+++ b/eshop_project/templates/user/register.html
@@ -6,9 +6,60 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body{
+            background-color:lightgray;
+        }
+        input[type=text],select{
+            width:30%;
+            padding: 12px 20px;
+            margin: 0 2%;
+            display: inline-block;
+            border:none;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        input[type=email],select{
+            width:30%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            margin-left: 2%;
+            display: inline-block;
+            border:none;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        input[type=password],select{
+            width:30%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            margin-left: 5px;
+            display: inline-block;
+            border:none;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        input[type=submit],select{
+            width: 8%;
+            background-color: whitesmoke;
+            padding: 15px 5px;
+            border: none;
+            border-radius: 5px;
+            margin-left: 15%;
+            
+        }
+        input[type=submit]:hover{
+            background-color: gray;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h3>Registration Page</h3>
+    <div style="background-color:lightslategrey ;padding: 10px;">
+        <h2 style="text-align: center;color: white;"> Registration Page</h2>
+
+    </div>
+    
 
 
     {% if messages %}
@@ -26,7 +77,7 @@
     
 
 
-    <form action="" method="post">
+    <form action="" method="post" class="mt-3">
         {% csrf_token %}
        <p> Name : <input type="text" name="name" id="" placeholder="name"></p>
        <p>Email : <input type="email" name="email" id="" placeholder="email"></p>
