--- a/eshop_project/templates/shop/add_product.html
+++ b/eshop_project/templates/shop/add_product.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Add Product Page</h3>
+    <h3>Add Product</h3>
     
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
