--- a/eshop_project/templates/user/register.html
+++ b/eshop_project/templates/user/register.html
@@ -13,7 +13,7 @@
         input[type=text],select{
             width:30%;
             padding: 12px 20px;
-            margin: 0 2%;
+            margin: 8px 0;
             display: inline-block;
             border:none;
             border-radius: 4px;
@@ -23,7 +23,6 @@
             width:30%;
             padding: 12px 20px;
             margin: 8px 0;
-            margin-left: 2%;
             display: inline-block;
             border:none;
             border-radius: 4px;
@@ -52,6 +51,7 @@
             background-color: gray;
             color: white;
         }
+        
     </style>
 </head>
 <body>
