--- a/eshop_project/templates/user/register.html
+++ b/eshop_project/templates/user/register.html
@@ -49,7 +49,7 @@
         }
         input[type=submit]:hover{
             background-color: gray;
-            color: white;
+            color: black;
         }
         
     </style>
