--- a/eshop_project/templates/shop/bookings.html
+++ b/eshop_project/templates/shop/bookings.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h3>Booking Details Page</h3>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
-            {% for i in data %}
-            <div class="col-lg-12 mt-3">
-                <!--------------------------- code for view booked product details : ------------------------------>
+            {% for i in data %} -->
+            <!-- <div class="col-lg-12 mt-3"> -->
+                <!--------------------------- code for view booked product details in admin part : ------------------------------>
                 <!-- <img src="{{i.product.img.url}}" alt=""> -->
                 <!-- name: {{i.product.product_name}} -->
                 <!-- price : {{i.price}} -->
@@ -21,12 +18,12 @@
                  <!-- doubt: i.field name ? -->
                 <!-- ------------------------------------------------------------------------------------------ -->
 
-            </div>
+            <!-- </div>
             {% endfor %}
 
         </div>
 
-    </div>
+    </div> -->
     
 </body>
 </html>
