--- a/eshop_project/templates/shop/shop_home.html
+++ b/eshop_project/templates/shop/shop_home.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">E_Shop</a>
@@ -21,6 +22,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="add_product">Add Product</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="bookings">Bookings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="logout">Logout</a>
@@ -50,7 +54,6 @@
         </div>
     </div>
 
-   
     
 </body>
 </html>
