--- a/eshop_project/templates/user/view_product.html
+++ b/eshop_project/templates/user/view_product.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <!-- page for view booked product details : -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5">
+                <img src="{{data.img.url}}" alt="">
+                <a href="">Add to cart</a>
+                <a href="">Buy now</a>
+
+            </div>
+            <div class="col-lg-7"></div>
+            <h2>{{data.name}}</h2>
+            <!-- <p>{{data.dis}}</p> -->
+            <p>{{data.price}}</p>
+            <p>{{data.offer_price}}</p>
+
+        </div>
+
+    </div>
 </body>
 </html>
