book_my_show_django

--- a/bms_project/static/css/style.css
+++ b/bms_project/static/css/style.css
@@ -249,3 +249,24 @@ li a{
 .main ul.active {
     display: flex; /* Show the menu when the active class is added */
 }
+
+/* ---------------------------------------------------------------------- */
+
+
+
+
+
+.bimg{
+    background: no-repeat;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+.fimg{
+    width: 260px;
+    height: 400px;
+    margin-top: 3%;
+    margin-left: 9%;
+}
