--- a/bms_project/templates/movie.html
+++ b/bms_project/templates/movie.html
@@ -43,9 +43,9 @@
                           </form>
                     </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -62,10 +62,10 @@
         <li><a href="">gift cards</a></li>
     </ul>
 </div>
-    <div class="img" style="background-image: url({{data.bg_img.url}});width: 100%;height: 500px;">
-        <a href="">
-            <img src="{{data.fg_img.url}}" alt="" style="width:300px;height:350px;">
-            <h2>{{data.movie_name}}</h2>
+    <div class="bimg container-fluid mt-3" style="background-image: url({{data.bg_img.url}});">
+        <a href="" style="text-decoration: none;">
+            <img src="{{data.fg_img.url}}" alt="" class="fimg rounded" >
+            <h1 class="text-white">{{data.movie_name}}</h1>
         </a>
     </div>
 </body>
