--- a/eshop_project/templates/user/view_product.html
+++ b/eshop_project/templates/user/view_product.html
@@ -11,19 +11,20 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
-                <img src="{{data.img.url}}" alt="">
-                <a href="">Add to cart</a>
-                <a href="">Buy now</a>
+                <img src="{{data.img.url}}" alt="" style="width: 100%;height: 500px;display: block;">
+                <a href="../add_to_cart/{{data.pk}}" class="btn btn-secondary mt-4">Add to cart</a>
+                <a href="" class="btn btn-secondary mt-4">Buy now</a>
+                
 
             </div>
             <div class="col-lg-7"></div>
             <h2>{{data.name}}</h2>
             <!-- <p>{{data.dis}}</p> -->
-            <p>{{data.price}}</p>
             <p>{{data.offer_price}}</p>
+            <p class="fw-light secondary" style="text-decoration:line-through;">{{data.price}}</p>
 
         </div>
-
+        
     </div>
 </body>
 </html>
