--- a/Babyhug_shop/templates/shop/shop_home.html
+++ b/Babyhug_shop/templates/shop/shop_home.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+  
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">E_Shop</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light" href="add_product">Add Product</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light" href="bookings">Bookings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light" href="logout">Logout</a>
+                    </li>    
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
     <h2>shop home page</h2>
-    <a href="logout">Logout</a>
+
+    <div class="container">
+        <div class="row">
+            {% for i in product %}
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="{{pro.img.url}}" alt="" class="card-img-top" style="width: 100%;height: 400px;">
+                    <div class="card-body">
+                        <h4 class="card-title">{{pro.product_name}}</h4>
+                        <p class="card-text">{{pro.price}}</p>
+                        <p class="card-text">{{pro.offer_price}}</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+
+            {% endfor %}
+            
+        </div>
+
+    </div>
 </body>
 </html>
