--- a/Babyhug_shop/templates/shop/add_product.html
+++ b/Babyhug_shop/templates/shop/add_product.html
@@ -4,34 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+   <style>
+   body{
+    background-color:whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:96vh;
+}
+.main_div{
+    max-width:400px ;
+    width: 100%;
+    padding:55px ;
+    background-color:rgb(46, 160, 154) ;
+    border-radius:8px ;
+}
+
+.add_pro{
+    text-align: center;
+    color: white;
+}
+
+input[type=text],select{
+    width:90%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;  
+    border:none;
+    border-radius: 4px;
+    box-sizing: border-box;
+
+    
+}
+input[type=number],select{
+    width:90%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;  
+    border:none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    
+}
+
+input[type=submit],select{
+    width: 18%;
+    background-color:rgb(6, 69, 66);
+    color: white;
+    
+    padding: 15px 5px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 40%;
+    
+}
+input[type=submit]:hover{
+    background-color: rgb(8, 94, 90);
+    color: white;
+}
+input[type=file],select{
+    width:70%;
+    margin: 8px 0;
+    display: inline-block;     
+}
+b{
+    color: whitesmoke;
+}
+   </style>
 </head>
 <body>
-    <h2>Add Product</h2>
-    <!-- <form action="" method="post">
-        {% csrf_token %}
-        <p><b>Product id : </b><input type="text" name="pro_id" id="" placeholder="product id"></p>
-        <p><b>Product name : </b><input type="text" name="name" id="" placeholder="product name"></p>
-        <p><b>Price : </b><input type="number" name="price" id="" placeholder="price"></p>
-        <p><b>Offer Price : </b><input type="number" name="o_price" id="" placeholder="offer price"></p>
-        <p><b>Product Image : </b><input type="file" name="img" id=""></p>
-        <input type="submit" value="Add">
-    </form> -->
     
-    <!-- <form action="/action_page.php">
-        <div class="mb-3 mt-3">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-        </div>
-        <div class="mb-3">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-        </div>
-        <div class="form-check mb-3">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" name="remember"> Remember me
-          </label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form> -->
+    <div class="main_div">
+        <h2 class="add_pro">Add Product</h2>
+        <form action="" method="post">
+            {% csrf_token %}
+            <p><b>Product id : </b><input type="text" name="pro_id" id="" placeholder="product id" class="p_id"></p>
+            <p><b>Product name : </b><input type="text" name="name" id="" placeholder="product name"></p>
+            <p><b>Price : </b><input type="number" name="price" id="" placeholder="price"></p>
+            <p><b>Offer Price : </b><input type="number" name="o_price" id="" placeholder="offer price"></p>
+            <p><b>Product Image : </b><input type="file" name="img" id=""></p>
+            <input type="submit" value="Add">
+        </form>
+    </div>
+    
 </body>
 </html>
