--- a/Babyhug_shop/templates/login.html
+++ b/Babyhug_shop/templates/login.html
@@ -11,11 +11,11 @@
     
     
     <div class="login_div" style="height: 220px;">
-        <h2 class="login mb-4" style="margin-left: 7%;" >Login</h2>
+        <h2 class="login mb-4" >Login</h2>
         <form action="" method="post">
             {% csrf_token %}
-            <p><b>UserName : </b><input type="text" name="uname" placeholder="username"></p>
-            <p><b>Password : </b><input type="password" name="password" placeholder="password"></p>
+            <p style="color: white;"><b>UserName : </b><input type="text" name="uname" placeholder="username"></p>
+            <p style="color: white;"><b>Password : </b><input type="password" name="password" placeholder="password"></p>
             <input type="submit" value="Login">
         </form>
 
