--- a/Babyhug_shop/templates/shop/add_product.html
+++ b/Babyhug_shop/templates/shop/add_product.html
@@ -76,10 +76,11 @@ b{
     
     <div class="main_div">
         <h2 class="add_pro">Add Product</h2>
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <p><b>Product id : </b><input type="text" name="pro_id" id="" placeholder="product id" class="p_id"></p>
             <p><b>Product name : </b><input type="text" name="name" id="" placeholder="product name"></p>
+            <p><b>Product discription : </b><input type="text" name="discription" id="" placeholder="discription"></p>
             <p><b>Price : </b><input type="number" name="price" id="" placeholder="price"></p>
             <p><b>Offer Price : </b><input type="number" name="o_price" id="" placeholder="offer price"></p>
             <p><b>Product Image : </b><input type="file" name="img" id=""></p>
